# scan_matching_tutorial

./: CMakeLists.txt  README.md
apps/: 00_icp.cpp  01_eigen_tester.cpp  02_csv_points_rotation.cpp  03_icp_nearest_neighbor.cpp  04_icp_evaluate_error.cpp  05_icp_error_evaluation.cpp
data/: icp_iteration_0.csv  icp_iteration_1.csv  icp_iteration_2.csv  icp_iteration_3.csv  icp_iteration_5.csv  rectangle_points10_rotated.csv
include/scan_matching/: csv_reader.hpp  icp.hpp
scripts/: plot_icp.py  plot_points.py
src/: csv_reader.cpp  icp.cpp
